Fix order by drop-down in the marketplace that was behind the cdp item.

--- a/client/src/components/MarketplacePage/MarketplacePage.scss
+++ b/client/src/components/MarketplacePage/MarketplacePage.scss
@@ -11,6 +11,8 @@
     align-items: center;
     justify-content: space-between;
     flex-shrink: 0;
+    position: relative;
+    z-index: 2;
 
     .filters {
       height: 100%;
